# synapse-learning-svc

./: .gitignore  README.md  SECRETS.md  learning-ai-owner__learning-ai-fastapi-scaffold-workflow-guide(김나경).html  settings.gradle.kts
.github/workflows/: ci.yml  deploy.yml  flyway-guard.yml  parse-workflow.yml
.yuji/history/: HISTORY_learning-card.md
.yuji/skills/: ai_rule.md
.yuji/workflow/: WORKFLOW_learning-card_W1.md  WORKFLOW_learning-card_W2.md  WORKFLOW_learning-card_W3.md  WORKFLOW_learning-card_W4.md
docs/demo/: DEMO_SCENARIO.md
docs/project-management/: README.md
docs/project-management/history/: HISTORY_learning-ai.md  HISTORY_learning-card.md
docs/project-management/prd/: PRD_W1.md  PRD_W2.md  PRD_W3.md  PRD_W4.md  PRD_W5.md
docs/project-management/scope/: SCOPE_learning-ai.md  SCOPE_learning-card.md
docs/project-management/task/: TASK_learning-ai.md  TASK_learning-card.md
docs/project-management/workflow/: WORKFLOW_learning-ai_W1.md  WORKFLOW_learning-ai_W2.md  WORKFLOW_learning-ai_W3.md  WORKFLOW_learning-ai_W4.md  WORKFLOW_learning-ai_W5.md  WORKFLOW_learning-card_W1.md  WORKFLOW_learning-card_W2.md  WORKFLOW_learning-card_W3.md  WORKFLOW_learning-card_W4.md  WORKFLOW_learning-card_W5.md
docs/rules/: 07-platform-flutter.md  07-platform-spring.md  10-container-k8s.md  13-python-llm.md
learning-ai/: .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  REPORT.md  docker-compose.yml  pyproject.toml
learning-ai/alembic/: env.py
learning-ai/alembic/versions/: 96f1bb4b65ed_create_note_chunks_table.py  e77208f4a3d7_create_embeddings_table.py
learning-ai/app/: __init__.py  main.py
learning-ai/app/ai/: __init__.py
learning-ai/app/api/: ai.py  deps.py  health.py
learning-ai/app/api/v1/: api.py
learning-ai/app/api/v1/endpoints/: ai.py  health.py
learning-ai/app/clients/: card_client.py  note_client.py
learning-ai/app/core/: config.py  exceptions.py  logging.py  prompts.py
learning-ai/app/db/: session.py
learning-ai/app/kafka/: consumer.py  notification_producer.py  schemas.py  ssl_support.py
learning-ai/app/models/: embedding.py  note_chunk.py
learning-ai/app/prompts/card_generation/: system.txt  user.jinja2
learning-ai/app/prompts/default/: system.txt
learning-ai/app/prompts/qa/: system.txt  user.jinja2
learning-ai/app/repositories/: embedding_repository.py  note_chunk_repository.py
learning-ai/app/schemas/: ai.py  base.py  health.py
learning-ai/app/services/: __init__.py  ai_service.py  anthropic_service.py  base.py  card_pipeline_service.py  claude_service.py  note_ingest_service.py  openai_service.py  rag_service.py
learning-ai/demo/: README.md  demo_note.md  demo_queries.json  seed_demo_data.py
learning-ai/tests/: __init__.py  conftest.py  test_ai.py  test_card_pipeline.py  test_embedding_repository.py  test_health.py  test_kafka_consumer.py  test_kafka_tls.py  test_note_chunk_repository.py  test_semantic_search_accuracy.py
learning-ai/tests/e2e/: conftest.py  test_ai_card_e2e.py
learning-card/: Dockerfile  build.gradle.kts  docker-compose.ci.yml  docker-compose.yml  settings.gradle.kts
learning-card/src/main/avro/: card_review_due.avsc  card_reviewed.avsc
learning-card/src/main/avro/learning/: CardReviewDue.avsc  ReviewCompleted.avsc
learning-card/src/main/resources/: application-demo.yml  application-dev.yml  application-prod.yml  application.properties  application.yml
learning-card/src/main/resources/db/demo/: V999__demo_seed_data.sql
learning-card/src/main/resources/db/migration/: V10__init_card_reviews.sql  V11__alter_cards_schema.sql  V12__alter_card_reviews_schema.sql  V9__init_cards.sql  (+8 more)
learning-card/src/test/resources/: application-test.yml
(+127 files in other folders)
