[project]
name = "learning-ai"
version = "0.1.0"
description = "Synapse Learning AI — FastAPI service for AI-powered learning features"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "numpy>=1.26.0",
    "tenacity>=8.2.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "aiokafka>=0.11.0",
    "confluent-kafka[avro]>=2.5.0",
    "redis[hiredis]>=5.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "testcontainers[postgres,kafka]>=4.4.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["ANN"]
"tests/*" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end integration tests requiring Docker",
]

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiokafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "confluent_kafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "prometheus_fastapi_instrumentator.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.test_semantic_search_accuracy"
ignore_errors = true
